stderr
FizzBuzzerTest.java:12: error: <identifier> expected
    @@Before
     ^
FizzBuzzerTest.java:15: error: ';' expected
        assertEquals(100,FizzBuzzer.answer().size())
                                                    ^
2 errors
